# theshortenerurl

./: .gitignore  makefile  manage.py  pyproject.toml
TheShortenerUrl/: asgi.py  settings.py  urls.py  wsgi.py
shortener_url/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
shortener_url/migrations/: 0001_initial.py
